was able to add a feature on the update song function where the user, after entering the title of the song they want to update, can press a button to have all the fields filled with the information for that song object.  Then the user can just change what they need to change without having to type everything out!  I can now move the modal popup back to the middle of the page, because I moved it so the user could see the table of songs while they were filling out the fields in the update song wizard

--- a/src/Components/DeleteSong.css
+++ b/src/Components/DeleteSong.css
@@ -13,5 +13,21 @@
     border: 2px solid #e20813;
     padding: .5rem;
     margin-bottom: 2rem;
-    background-color: rgba(0, 0, 0, 0.712);
+    background-color: rgb(0, 0, 0);
+    color: red
+}
+
+button {
+    background-color: #64113f81;
+    font-size: small;
+    
+}
+
+.delete-button {
+    background-color: gray;
+}
+
+input {
+    font-size: small;
+    font-family:Georgia, 'Times New Roman', Times, serif
 }
