added code to all the inputs so that when the user double-clicks on the field the label text disappears and when they submit the information the input field also clears.  Had to use props for one of the user state set functions because the input field and button were on different files.

--- a/src/Components/DisplayMusic.css
+++ b/src/Components/DisplayMusic.css
@@ -5,13 +5,14 @@
 }
 
 .display-table {
-    width: 50rem;
+    width: auto;
     height: auto;
     margin: auto;
+    margin-right: 1.5rem;
 }
 
 .title {
-    width: 10rem;
+    width: 12rem;
     border: 1px solid black;
     text-align: center;
 
@@ -29,19 +30,19 @@
     
 }
 .release-date {
-    width: 5rem;
+    width: 6rem;
     border: 1px solid black;
     text-align: center;
 
 }
 .likes {
-    width: 5rem;
+    width: 4rem;
     border: 1px solid black;
     text-align: center;
 
 }
 .genre {
-    width: 6rem;
+    width: 7rem;
     border: 1px solid black;
 }
 
